Quote z-index fix (?)

--- a/fe-scaffold/app/scss/partials/_quotes.scss
+++ b/fe-scaffold/app/scss/partials/_quotes.scss
@@ -12,6 +12,8 @@ blockquote {
     font-style: italic;
     line-height: 1;
     margin-bottom: 0;
+    position: relative;
+    z-index: 1;
 
     &::before,
     &::after {
